Fix image overflow bug

--- a/sass/modules/village/_landing.scss
+++ b/sass/modules/village/_landing.scss
@@ -7,7 +7,9 @@
   color: $base02;
 }
 
-.main-image { max-width: 100%; }
+.main-image {
+  img { max-width: 100%; }
+}
 .intro {
   @include clearfix;
   @include trailer;
@@ -50,7 +52,6 @@
   clear: both;
   @include at-breakpoint($break) {
     @include leading-border(12px,3);
-    // @include border-image(image-url('landing/line.png') 100% 0 repeat);
     @include padding-trailer(3);
     min-height: rhythm(12);
   }
